--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js"></script>
+
     <title>Document</title>
+
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="scores">
+      <p id="pScore">Player score: <span id="playerScore">0</span></p>
+      <p id="cScore">Computer score: <span id="computerScore">0</span></p>
+    </div>
+    <div class="display"></div>
+
+    <div>
+      <button class="btns" id="rock">Rock</button>
+      <button class="btns" id="paper">Paper</button>
+      <button class="btns" id="scissors">Scissors</button>
+    </div>
+  </body>
 </html>
